style the service section by introducing a div. Style it by adding a background image and putting it at 100% to ensure it covers 100%screen regardless of the screen size. Align the text center and change the font color to white to make it more visible.

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h2{
 #output{
   display:none;
 }
-.introduction{
+#introduction{
   background-image: url("../Images/background-images/first_background.jpg");
   width: 100%;
   height: 100vh;
@@ -50,22 +50,40 @@ h2{
   text-align: center;
   color: white;
 }
-.introduction>h1,.introduction>p,.introduction>img{
+#introduction>h1,.introduction>p,.introduction>img{
   margin: 1%;
   padding:1%;
 
 }
-.introduction>img{
+#introduction>img{
   padding-top: 6%;
 }
+
 .about{
 text-align: center;
 margin-top: 50px;
+margin-bottom: 50px;
+/* height: 50vh; */
 }
-.about h2{
+h2{
   font-weight: 700;
 }
-.about p{
+p{
   line-height: 30pt;
+}
+.services{
+  background-image: url("../Images/background-images/s_image.jpg");
+  width:100%;
+  height:50vh;
+  background-size: cover;
+  text-align: center;
+  color: white;
+  padding-bottom:
+}
+.services h2{
+  padding-top: 90px;
+}
+.services p{
+  margin:auto, 70px;
 
 }
